testsuite/tests/patsyn/should_fail/unboxed-bind.stderr

unboxed-bind.hs:11:11: warning: [-Wunbanged-strict-patterns (in -Wextra)]
    Pattern bindings containing unlifted types should use
    an outermost bang pattern:
      P arg = x

<no location info>: error: 
Failing due to -Werror.
